--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="runner" translatesAutoresizingMaskIntoConstraints="NO" id="8p2-UF-fks">
-                                <rect key="frame" x="0.0" y="-80" width="375" height="747"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yY0-5y-3hh">
                                 <rect key="frame" x="63" y="39" width="248" height="29"/>
@@ -91,7 +91,7 @@
                                     <segment title="Tracks"/>
                                     <segment title="Urges"/>
                                 </segments>
-                                <color key="tintColor" red="0.0" green="0.57809930099999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FwJ-qE-Jh7" customClass="TREditTracksTableView" customModule="Tracker" customModuleProvider="target">
                                 <rect key="frame" x="16" y="72" width="343" height="595"/>
@@ -167,7 +167,7 @@
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" id="Hzk-6x-ZmS"/>
                             <constraint firstItem="8p2-UF-fks" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leading" id="JGL-fz-d1l"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailingMargin" id="K3B-aa-O7C"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" constant="-100" id="TaL-LI-NvN"/>
+                            <constraint firstItem="8p2-UF-fks" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" id="TaL-LI-NvN"/>
                             <constraint firstItem="8p2-UF-fks" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailing" id="U4C-fN-dwj"/>
                             <constraint firstItem="yY0-5y-3hh" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" constant="19" id="t2w-5D-pkV"/>
                         </constraints>
