--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -82,11 +82,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="runner" translatesAutoresizingMaskIntoConstraints="NO" id="8p2-UF-fks">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search Through Your Records" translatesAutoresizingMaskIntoConstraints="NO" id="QCP-yP-v5L">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <color key="barTintColor" red="0.074731691919191934" green="0.074731691919191934" blue="0.074731691919191934" alpha="1" colorSpace="calibratedRGB"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="search"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="runner" translatesAutoresizingMaskIntoConstraints="NO" id="8p2-UF-fks">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yY0-5y-3hh">
-                                <rect key="frame" x="63" y="39" width="248" height="29"/>
+                                <rect key="frame" x="26" y="90" width="323" height="29"/>
                                 <segments>
                                     <segment title="Tracks"/>
                                     <segment title="Urges"/>
@@ -97,7 +102,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FwJ-qE-Jh7" customClass="TREditTracksTableView" customModule="Tracker" customModuleProvider="target">
-                                <rect key="frame" x="16" y="72" width="343" height="595"/>
+                                <rect key="frame" x="16" y="123" width="343" height="544"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -162,26 +167,47 @@
                             <accessibilityTraits key="traits" image="YES"/>
                         </accessibility>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="yY0-5y-3hh" secondAttribute="trailing" constant="48" id="5Qx-3c-wRK"/>
-                            <constraint firstItem="yY0-5y-3hh" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" constant="47" id="971-pV-TXU"/>
-                            <constraint firstItem="FwJ-qE-Jh7" firstAttribute="top" secondItem="yY0-5y-3hh" secondAttribute="bottom" constant="5" id="Bqx-Nj-MPu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yY0-5y-3hh" secondAttribute="trailing" constant="10" id="5Qx-3c-wRK"/>
+                            <constraint firstItem="yY0-5y-3hh" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" constant="10" id="971-pV-TXU"/>
+                            <constraint firstItem="QCP-yP-v5L" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" id="CXZ-bk-OtC"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="bottom" secondItem="2LJ-LW-NBh" secondAttribute="top" id="H7t-jg-47M"/>
                             <constraint firstItem="8p2-UF-fks" firstAttribute="bottom" secondItem="2LJ-LW-NBh" secondAttribute="top" id="Hpy-ob-ai0"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leadingMargin" id="Hzk-6x-ZmS"/>
                             <constraint firstItem="8p2-UF-fks" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leading" id="JGL-fz-d1l"/>
                             <constraint firstItem="FwJ-qE-Jh7" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailingMargin" id="K3B-aa-O7C"/>
-                            <constraint firstItem="8p2-UF-fks" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" id="TaL-LI-NvN"/>
+                            <constraint firstItem="yY0-5y-3hh" firstAttribute="top" secondItem="QCP-yP-v5L" secondAttribute="bottom" constant="26" id="OUf-3E-2BC"/>
+                            <constraint firstItem="QCP-yP-v5L" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailing" id="T1n-EN-DJh"/>
                             <constraint firstItem="8p2-UF-fks" firstAttribute="trailing" secondItem="uh5-dv-4Vr" secondAttribute="trailing" id="U4C-fN-dwj"/>
-                            <constraint firstItem="yY0-5y-3hh" firstAttribute="top" secondItem="wxM-WD-TxK" secondAttribute="bottom" constant="19" id="t2w-5D-pkV"/>
+                            <constraint firstItem="FwJ-qE-Jh7" firstAttribute="top" secondItem="yY0-5y-3hh" secondAttribute="bottom" constant="5" id="XIb-hu-nMl"/>
+                            <constraint firstItem="QCP-yP-v5L" firstAttribute="leading" secondItem="uh5-dv-4Vr" secondAttribute="leading" id="ZoJ-ab-OME"/>
+                            <constraint firstItem="8p2-UF-fks" firstAttribute="top" secondItem="QCP-yP-v5L" secondAttribute="bottom" id="xRI-0m-Cqf"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="editTracksTableView" destination="FwJ-qE-Jh7" id="fQ7-G9-cF9"/>
                         <outlet property="itemTypeSegmentedControl" destination="yY0-5y-3hh" id="5f8-3t-Deo"/>
+                        <outlet property="recordSearchBar" destination="QCP-yP-v5L" id="d6v-F0-uzT"/>
+                        <outlet property="searchDisplayController" destination="BFB-aP-FdU" id="mAV-Xk-E7A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wm5-K6-5hj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="B2L-kO-1f5">
+                    <connections>
+                        <outlet property="delegate" destination="7Tx-Ke-KiD" id="gUN-Re-uvP"/>
+                        <outlet property="searchContentsController" destination="7Tx-Ke-KiD" id="I1J-PP-Px9"/>
+                        <outlet property="searchResultsDataSource" destination="7Tx-Ke-KiD" id="rT9-Oj-uXO"/>
+                        <outlet property="searchResultsDelegate" destination="7Tx-Ke-KiD" id="61q-3P-BDn"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="BFB-aP-FdU">
+                    <connections>
+                        <outlet property="delegate" destination="7Tx-Ke-KiD" id="LdQ-fi-7hw"/>
+                        <outlet property="searchContentsController" destination="7Tx-Ke-KiD" id="yKH-ca-l6C"/>
+                        <outlet property="searchResultsDataSource" destination="7Tx-Ke-KiD" id="oin-U9-Hmq"/>
+                        <outlet property="searchResultsDelegate" destination="7Tx-Ke-KiD" id="uIk-l9-ti4"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="666.5" y="518.5"/>
         </scene>
